--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ branches:
 script:
   - bundle exec rake spec
 before_script:
+  - cp -n config/secrets.yml.example config/secrets.yml
 before_install:
   - gem install bundler
