Exceptions to Sentry basics

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -13,6 +13,8 @@ test:
     delivery_threshold: 5
     delivery_interval: 5
 production:
+  sentry:
+    dsn: ssm(sentry_dsn)
   kafka:
     application_name: 'events-capture-api'
     broker_host: "{{ kafka_broker_host }}"
