--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -13,6 +13,8 @@ test:
     delivery_threshold: 5
     delivery_interval: 5
 production:
+  scout:
+    license_key: ssm(scout_license_key)
   sentry:
     dsn: ssm(sentry_dsn)
   kafka:
