let's see if quoting the replacement is important

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -43,5 +43,5 @@ production:
     application_name: 'events-capture-api'
     broker_host: "{{ kafka_broker_host }}"
     log_name: '{{ kafka_log_name }}'
-    delivery_threshold: {{ kafka_delivery_threshold}}
-    delivery_interval: {{ kafka_delivery_interval }}
+    delivery_threshold: '{{ kafka_delivery_threshold }}'
+    delivery_interval: '{{ kafka_delivery_interval }}'
