--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -35,6 +35,7 @@ production:
       signature_public_key: |
         ssm(sso_signature_public_key)
       encryption_private_key: ssm(sso_encryption_private_key)
+  secret_key_base: random(hex,80)
   scout:
     license_key: ssm(scout_license_key)
   sentry:
@@ -43,5 +44,6 @@ production:
     application_name: 'events-capture-api'
     broker_host: "{{ kafka_broker_host }}"
     log_name: '{{ kafka_log_name }}'
-    delivery_threshold: {{ kafka_delivery_threshold}}
-    delivery_interval: {{ kafka_delivery_interval }}
+    delivery_threshold: '{{ kafka_delivery_threshold }}'
+    delivery_interval: '{{ kafka_delivery_interval }}'
+
