Add to secrets for schema validation

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -13,6 +13,8 @@ development:
     log_name: 'log/kafka.log'
     delivery_threshold: 5
     delivery_interval: 5
+    schema_url: 'http://localhost:8081/'
+    schemas_path: 'app/schemas'
 test:
   accounts:
     sso:
@@ -28,6 +30,8 @@ test:
     log_name: 'log/kafka.log'
     delivery_threshold: 5
     delivery_interval: 5
+    schema_url: 'http://localhost:8081/'
+    schemas_path: 'app/schemas'
 production:
   accounts:
     sso:
@@ -44,6 +48,7 @@ production:
     application_name: 'events-capture-api'
     broker_host: "{{ kafka_broker_host }}"
     log_name: '{{ kafka_log_name }}'
-    delivery_threshold: '{{ kafka_delivery_threshold }}'
-    delivery_interval: '{{ kafka_delivery_interval }}'
-
+    delivery_threshold: {{ kafka_delivery_threshold}}
+    delivery_interval: {{ kafka_delivery_interval }}
+    schema_url: {{ kafka_schema_url }}
+    schemas_path: {{ kafka_schemas_path }}
