Update ruby to 2.6.6 & add avro-builder for nudges

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 
 .byebug_history
 
+# Ignore generate avro schemas
+avro/schema/*
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
