need to quote strings that will secrets substituted

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -46,9 +46,9 @@ production:
     dsn: ssm(sentry_dsn)
   kafka:
     application_name: 'events-capture-api'
-    broker_host: "{{ kafka_broker_host }}"
+    broker_host: '{{ kafka_broker_host }}'
     log_name: '{{ kafka_log_name }}'
-    delivery_threshold: {{ kafka_delivery_threshold}}
-    delivery_interval: {{ kafka_delivery_interval }}
-    schema_url: {{ kafka_schema_url }}
-    schemas_path: {{ kafka_schemas_path }}
+    delivery_threshold: '{{ kafka_delivery_threshold}}'
+    delivery_interval: '{{ kafka_delivery_interval }}'
+    schema_url: '{{ kafka_schema_url }}'
+    schemas_path: '{{ kafka_schemas_path }}'
