Change admin uuids

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -1,5 +1,5 @@
 development:
-  admin_uuids: ssm(/external/event-capture/admin_uuids)
+  admin_uuids: ssm(admin_uuids)
   accounts:
     sso:
       cookie_name: 'oxa_dev'
@@ -34,7 +34,7 @@ test:
     schema_url: 'http://localhost:8081/'
     schemas_path: 'schemas'
 production:
-  admin_uuids: ssm(/external/event-capture/admin_uuids)
+  admin_uuids: ssm(admin_uuids)
   accounts:
     sso:
       cookie_name: ssm(sso_cookie_name)
