Add device_uuid to avro, refactoring the dsl

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -1,6 +1,7 @@
 development:
   admin_uuids: ssm(admin_uuids)
   accounts:
+    device_cookie_name: 'oxdid'
     sso:
       cookie_name: 'oxa_dev'
       signature_public_key: |
@@ -34,6 +35,7 @@ test:
 production:
   admin_uuids: ssm(admin_uuids)
   accounts:
+    device_cookie_name: 'oxdid'
     sso:
       cookie_name: ssm(sso_cookie_name)
       signature_public_key: |
