Add a configurations of topics by partition

--- a/config/topics.yml
+++ b/config/topics.yml
@@ -5,7 +5,8 @@ topics: [
         'org.openstax.ec.nudged_v1'
     ],
     config: {
-      replication: 3
+      replication: 3,
+      partitions: 3
     }
   },
   {
@@ -14,7 +15,8 @@ topics: [
         'org.openstax.ec.accessed_studyguide_v1'
     ],
     config: {
-      replication: 3
+      replication: 3,
+      partitions: 3
     }
   },
   {
@@ -23,7 +25,8 @@ topics: [
         'org.openstax.ec.created_highlight_v1'
     ],
     config: {
-      replication: 3
+      replication: 3,
+      partitions: 3
     }
   },
   {
@@ -32,7 +35,8 @@ topics: [
         'org.openstax.ec.started_session_v1'
     ],
     config: {
-      replication: 3
+      replication: 3,
+      partitions: 3
     }
   }
 ]
