Remove travis and add github action to readme

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           gem install bundler
           bundle install
+          bundle exec rake setup
           bundle exec rspec
       - name: Upload coverage results
         uses: actions/upload-artifact@master
