fix some docker configs

--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -11,11 +11,11 @@ development:
       encryption_private_key: 'foobar'
   kafka:
     application_name: 'events-capture-api'
-    broker_host: 'localhost:9092'
+    broker_host: <%= ENV['KAFKA_BROKER_HOST'] || 'localhost:9092' %>
     log_name: 'log/kafka.log'
     delivery_threshold: 5
     delivery_interval: 5
-    schema_url: 'http://localhost:8081/'
+    schema_url: <%= ENV['KAFKA_SCHEMA_URL'] || 'http://localhost:8081/' %>
 test:
   accounts:
     sso:
