New event: changed_state (visibility or other types) (#69)
* make docker ruby version match google actions

* First cut changed_session event

* fix yaml syntax

* Rename event to changed_state, allow for multiple types of state

---------

Co-authored-by: staxly[bot] <35789409+staxly[bot]@users.noreply.github.com>

--- a/config/topics.yml
+++ b/config/topics.yml
@@ -40,6 +40,16 @@ topics: [
     }
   },
   {
+    name: 'changed_session',
+    schemas: [
+        'org.openstax.ec.changed_session_v1'
+    ],
+    config: {
+      replication: 3,
+      partitions: 3
+    }
+  },
+  {
     name: 'interacted_element',
     schemas: [
         'org.openstax.ec.interacted_element_v1'
