--- a/config/topics.yml
+++ b/config/topics.yml
@@ -69,4 +69,15 @@ topics: [
       partitions: 3
     }
   }
+  },
+  {
+    name: 'xapi_statement',
+    schemas: [
+        'org.adlnet.xapi.Statement'
+    ],
+    config: {
+      replication: 3,
+      partitions: 3
+    }
+  }
 ]
