xAPI statement input and storing (#84)
* avro for xapi statement

* matching swagger/avro

* fixed up error handling and specs

--- a/config/topics.yml
+++ b/config/topics.yml
@@ -68,5 +68,15 @@ topics: [
       replication: 3,
       partitions: 3
     }
+  },
+  {
+    name: 'xapi_statement',
+    schemas: [
+        'org.adlnet.xapi.Statement'
+    ],
+    config: {
+      replication: 3,
+      partitions: 3
+    }
   }
 ]
